<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_layout_padding"
    tools:context=".ui.MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_0_text" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_1_text" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_2_text" />

    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/imgPoster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/imageview_margin_top"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/tabView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnPrev"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/description_text_size"
        android:layout_marginBottom="@dimen/textview_margin_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imgPoster"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPrev"
        android:theme="@style/ThemeOverlay.Button.White"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        app:icon="@drawable/ic_back"
        app:iconTint="@null"
        app:iconGravity="textStart"
        android:padding="0dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ButtonShape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnNext" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:theme="@style/ThemeOverlay.Button.White"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        app:icon="@drawable/ic_forward"
        app:iconTint="@null"
        app:iconGravity="textStart"
        android:padding="0dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ButtonShape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPrev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <LinearLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_outline_cloud_24">
        </ImageView>

        <TextView android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_message"
            android:textSize="@dimen/error_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_500"
            android:text="@string/retry_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>